--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/jest": "^30.0.0",
     "axios": "^1.6.0",
     "ccxt": "^4.1.0",
+    "dayjs": "^1.11.13",
     "dotenv": "^16.3.1",
     "firebase-admin": "^13.4.0",
     "jest": "^30.0.4",
